deployment/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: share-backend
  labels:
    app: share-backend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: share-backend-app
  template:
    metadata:
      name: share-backend-app
      labels:
        app: share-backend-app
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8081"
    spec:
      containers:
        - name: share-backend
          image: share-backend-image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 10
            failureThreshold: 30
            timeoutSeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 10
          volumeMounts:
            - name: spring-application-config
              mountPath: /app/config
      volumes:
        - name: spring-application-config
          configMap:
            name: backend-application-config
      restartPolicy: Always
