deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: share-backend
spec:
  selector:
    app: share-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
